--- a/css/media.css
+++ b/css/media.css
@@ -10,12 +10,30 @@
     .container{
         max-width:720px;
     }
+    .hero{
+        background-position: center;
+    }
+    .col-md-6{
+        width: 50%;
+    }
 }
 
  /* lg  */
 @media(min-width:992px){
     .container{
         max-width:960px;
+    }
+    .d-lg-flex{
+        display: flex;
+    }
+    .header nav .navbar-toggler{
+        display: none;
+    }
+    .col-lg-3{
+        width: 25%;
+    }
+    .col-lg-6{
+        width: 50%;
     }
 }
 
